@@ -647,7 +647,7 @@ class BaseDefinition(object):
         pathDict = {
             "%s.recipe" % self._troveName : filetypes.RegularFile(
                 contents = recipe, config=True),
-            self._troveFileName : filetypes.RegularFile(
+            self._troveFileNames[0] : filetypes.RegularFile(
                 contents = stream.getvalue(), config=True),
         }
         cLog = changelog.ChangeLog(name = conaryClient.cfg.name,
@@ -678,23 +678,34 @@ class BaseDefinition(object):
         nvfs = troves[troveSpec]
         n,v,f = nvfs[0]
         if hasattr(repos, 'getFileContentsFromTrove'):
-            try:
-                contents = repos.getFileContentsFromTrove(n,v,f,
-                                              [self._troveFileName])[0]
-            except repositoryErrors.PathsNotFound:
+            contents = None
+            for troveFileName in self._troveFileNames:
+                try:
+                    contents = repos.getFileContentsFromTrove(n,v,f,
+                                                  [troveFileName])[0]
+                    break
+                except repositoryErrors.PathsNotFound:
+                    pass
+            if contents is None:
                 raise ProductDefinitionFileNotFoundError()
             return contents.get(), (n,v,f)
 
         trvCsSpec = (n, (None, None), (v, f), True)
         cs = conaryClient.createChangeSet([ trvCsSpec ], withFiles = True,
                                           withFileContents = True)
+        troveFileNameMap = dict((x, i)
+            for (i, x) in enumerate(self._troveFileNames))
         for thawTrvCs in cs.iterNewTroveList():
             paths = [ x for x in thawTrvCs.getNewFileList()
-                      if x[1] == self._troveFileName ]
+                if x[1] in troveFileNameMap ]
             if not paths:
                 continue
+            # Prefer the platdef from the highest ranked file
+            pathId, path, fileId, fileVer = min(paths,
+                key = lambda x, m = troveFileNameMap: m[x[1]])
+
             # Fetch file from changeset
-            fileSpecs = [ (fId, fVer) for (_, _, fId, fVer) in paths ]
+            fileSpecs = [ (fileId, fileVer) ]
             fileContents = repos.getFileContents(fileSpecs)
             return fileContents[0].get(), thawTrvCs.getNewNameVersionFlavor()
 
@@ -739,7 +750,9 @@ class ProductDefinition(BaseDefinition):
     RootNode = 'productDefinition'
 
     _troveName = 'product-definition'
-    _troveFileName = 'product-definition.xml'
+    _troveFileNames = [
+        'product-definition.xml',
+    ]
 
     _recipe = '''
 #
@@ -2027,7 +2040,12 @@ class PlatformDefinition(BasePlatform):
     RootNode = 'platformDefinition'
 
     _troveName = 'platform-definition'
-    _troveFileName = 'platform-definition.xml'
+
+    # list of files to search for in the trove, ordered by priority.
+    _troveFileNames = [
+        'platform-definition-4.0.xml',
+        'platform-definition.xml',
+    ]
 
     _recipe = '''
 #
